<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.dawidmichalowicz.kalkulatorbmi.MainActivity">


        <TextView
            android:id="@+id/heightTV"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/heightPrompt"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp" />


        <EditText
            android:id="@+id/heightET"
            android:layout_toEndOf="@id/heightTV"
            android:layout_alignBottom="@id/heightTV"
            android:layout_width="150dp"
            android:inputType="numberDecimal"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"/>

        <Spinner
            android:id="@+id/hUnitSpinner"
            android:layout_toEndOf="@id/heightET"
            android:layout_alignBottom="@id/heightET"
            android:layout_width="100dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/weightTV"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/heightTV"
            android:text="@string/weightPrompt"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp" />


        <EditText
            android:id="@+id/weightET"
            android:layout_below="@id/heightET"
            android:layout_alignStart="@id/heightET"
            android:layout_width="150dp"
            android:inputType="numberDecimal"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"/>

        <Spinner
            android:id="@+id/wUnitSpinner"
            android:layout_below="@id/hUnitSpinner"
            android:layout_alignBottom="@id/weightET"
            android:layout_alignStart="@id/hUnitSpinner"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/countButton"
            android:layout_below="@id/weightTV"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:text="@string/submitText"
            android:textSize="25sp"
            android:textAlignment="center"
            android:focusable="true"/>

        <TextView
            android:id="@+id/resultTVnum"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="75sp"
            android:textAlignment="center"
            android:layout_below="@+id/countButton"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/categoriesTV"
            android:layout_below="@id/resultTVnum"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/resultList"
            android:layout_margin="12dp"/>

    </RelativeLayout>
</ScrollView>